--- a/MuZest/Modules/Feed/Feed.storyboard
+++ b/MuZest/Modules/Feed/Feed.storyboard
@@ -12,7 +12,7 @@
         <!--Home-->
         <scene sceneID="dOd-1M-TBK">
             <objects>
-                <viewController id="vc4-0E-bZq" customClass="FeedViewController" customModule="MuZest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="vc4-0E-bZq" customClass="FeedTableViewController" customModule="MuZest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="o9D-gc-Uei">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
