--- a/MuZest/Base.lproj/Main.storyboard
+++ b/MuZest/Base.lproj/Main.storyboard
@@ -256,7 +256,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="1pi-LK-Wic" kind="relationship" relationship="viewControllers" id="Tvw-BI-xAO"/>
+                        <segue destination="tI9-7i-BvN" kind="relationship" relationship="viewControllers" id="bf4-NU-Naw"/>
                         <segue destination="CRe-l1-hjV" kind="relationship" relationship="viewControllers" id="q6M-Qc-FQB"/>
                         <segue destination="v8f-to-VS1" kind="relationship" relationship="viewControllers" id="6SP-S4-Zf1"/>
                     </connections>
@@ -301,10 +301,23 @@
             </objects>
             <point key="canvasLocation" x="2366" y="317"/>
         </scene>
+        <!--MuZest-->
+        <scene sceneID="zv1-Ln-XXY">
+            <objects>
+                <viewControllerPlaceholder storyboardName="MuZest" id="tI9-7i-BvN" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="icon-home-filled" id="DzX-rp-AvO">
+                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
+                    </tabBarItem>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dfv-Lb-biU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2312" y="-302"/>
+        </scene>
     </scenes>
     <resources>
         <image name="bgLogin" width="414" height="736"/>
         <image name="house-7" width="30" height="30"/>
+        <image name="icon-home-filled" width="21" height="19"/>
         <image name="log_in_btn_2" width="250" height="59"/>
         <image name="login_bg" width="308" height="408"/>
         <image name="logo_blue" width="160" height="46"/>
