--- a/MuZest/Base.lproj/Main.storyboard
+++ b/MuZest/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TO2-P4-RzB">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,7 +12,7 @@
         <!--Auth View-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="AuthView" customModule="MuZest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AuthView" id="BYZ-38-t0r" customClass="AuthView" customModule="MuZest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,7 +22,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" insetsLayoutMarginsFromSafeArea="NO" image="login_bg" translatesAutoresizingMaskIntoConstraints="NO" id="fxS-OM-lUd">
-                                <rect key="frame" x="35" y="90" width="250" height="408"/>
+                                <rect key="frame" x="35" y="112" width="250" height="408"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_blue" translatesAutoresizingMaskIntoConstraints="NO" id="bcF-V0-hXD">
                                 <rect key="frame" x="80" y="130" width="160" height="46"/>
@@ -109,21 +109,21 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="JMG-Bj-0PA"/>
                     <connections>
                         <outlet property="emailLabel" destination="jtv-sm-fWW" id="0R3-09-zUh"/>
                         <outlet property="passwordLabel" destination="wtd-oy-OEm" id="9Vg-9O-PHa"/>
-                        <segue destination="TO2-P4-RzB" kind="show" identifier="toFeed" id="oGx-nn-LAR"/>
-                        <segue destination="08j-28-IGk" kind="show" identifier="toRegister" id="a4d-Fh-rZt"/>
+                        <segue destination="TO2-P4-RzB" kind="presentation" identifier="toFeed" id="TTJ-cz-Gc7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="272" y="132"/>
+            <point key="canvasLocation" x="3214" y="-630"/>
         </scene>
         <!--Register View-->
         <scene sceneID="a82-Ms-Jjf">
             <objects>
-                <viewController id="08j-28-IGk" customClass="RegisterView" customModule="MuZest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RegisterView" id="08j-28-IGk" customClass="RegisterView" customModule="MuZest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8og-GH-zFz">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -239,17 +239,16 @@
                         <outlet property="passwordConfirmTextField" destination="9JH-qT-KdO" id="ySR-K7-blD"/>
                         <outlet property="passwordTextField" destination="uK7-tu-ere" id="iGX-Ov-4P9"/>
                         <outlet property="usernameTextField" destination="CId-ZI-AlD" id="V9F-Ji-b7c"/>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="toAuth" id="Kf5-Il-aXd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SB8-Oa-Lit" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1080" y="-670"/>
+            <point key="canvasLocation" x="4073" y="-630"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="tJl-UA-Ogg">
             <objects>
-                <tabBarController id="TO2-P4-RzB" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="FeedController" id="TO2-P4-RzB" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DZt-zE-ahK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -263,7 +262,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bA5-pS-gvS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1436" y="133"/>
+            <point key="canvasLocation" x="2244" y="168"/>
         </scene>
         <!--CreatingPost-->
         <scene sceneID="g6T-n1-TAY">
@@ -275,19 +274,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fm3-GG-3WL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2401" y="131"/>
-        </scene>
-        <!--Feed-->
-        <scene sceneID="lbL-3P-KyN">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Feed" id="1pi-LK-Wic" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="house-7" id="0Uf-QI-GIO">
-                        <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
-                    </tabBarItem>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tJu-cg-Ach" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2355" y="-42"/>
+            <point key="canvasLocation" x="3082" y="168"/>
         </scene>
         <!--Profile-->
         <scene sceneID="9pe-yT-oM4">
@@ -299,24 +286,41 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LVj-zU-Clt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2366" y="317"/>
+            <point key="canvasLocation" x="3043" y="266"/>
         </scene>
-        <!--MuZest-->
+        <!--Feed-->
         <scene sceneID="zv1-Ln-XXY">
             <objects>
-                <viewControllerPlaceholder storyboardName="MuZest" id="tI9-7i-BvN" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardName="Feed" id="tI9-7i-BvN" userLabel="Feed" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="" image="icon-home-filled" id="DzX-rp-AvO">
                         <inset key="imageInsets" minX="0.0" minY="5" maxX="0.0" maxY="-5"/>
                     </tabBarItem>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dfv-Lb-biU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2312" y="-302"/>
+            <point key="canvasLocation" x="3036" y="97"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="uoV-Up-M3R">
+            <objects>
+                <navigationController storyboardIdentifier="AuthController" automaticallyAdjustsScrollViewInsets="NO" id="4wD-z3-afb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="F4Y-hq-E9c">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="pKE-IU-KPs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8sL-Wd-cFo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2246" y="-631"/>
         </scene>
     </scenes>
     <resources>
         <image name="bgLogin" width="414" height="736"/>
-        <image name="house-7" width="30" height="30"/>
         <image name="icon-home-filled" width="21" height="19"/>
         <image name="log_in_btn_2" width="250" height="59"/>
         <image name="login_bg" width="308" height="408"/>
