--- a/MuZest/Modules/Profile/Profile.storyboard
+++ b/MuZest/Modules/Profile/Profile.storyboard
@@ -9,17 +9,97 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Profile-->
+        <!--Profile View-->
         <scene sceneID="i7q-Uk-dTv">
             <objects>
-                <viewController id="PME-L5-NEi" customClass="ProfileViewController" customModule="MuZest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="PME-L5-NEi" customClass="ProfileView" customModule="MuZest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="89a-xr-bbs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gyx-Sx-dH3">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HB2-r2-Wcq">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yo0-mK-AnH">
+                                                <rect key="frame" x="165" y="200" width="45" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="about" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hbK-Lu-pIH">
+                                                <rect key="frame" x="16" y="231" width="343" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="followers: 10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5gR-4N-Bep">
+                                                <rect key="frame" x="16" y="293" width="96" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="following: 5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wMo-9d-4l3">
+                                                <rect key="frame" x="16" y="262" width="88" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="oVm-hH-4Yg">
+                                                <rect key="frame" x="97.5" y="10" width="180" height="180"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="180" id="FpC-Kq-sHU"/>
+                                                    <constraint firstAttribute="width" constant="180" id="tve-t8-QPx"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="posts: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1gc-5K-mhu">
+                                                <rect key="frame" x="16" y="324" width="62" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="5gR-4N-Bep" firstAttribute="top" secondItem="wMo-9d-4l3" secondAttribute="bottom" constant="10" id="2dk-FV-CLy"/>
+                                            <constraint firstItem="1gc-5K-mhu" firstAttribute="leading" secondItem="5gR-4N-Bep" secondAttribute="leading" id="8n9-kk-N0s"/>
+                                            <constraint firstItem="oVm-hH-4Yg" firstAttribute="top" secondItem="HB2-r2-Wcq" secondAttribute="top" constant="10" id="As1-7h-ImJ"/>
+                                            <constraint firstItem="5gR-4N-Bep" firstAttribute="leading" secondItem="wMo-9d-4l3" secondAttribute="leading" id="P1l-v6-y41"/>
+                                            <constraint firstItem="wMo-9d-4l3" firstAttribute="leading" secondItem="hbK-Lu-pIH" secondAttribute="leading" id="QmC-gg-sch"/>
+                                            <constraint firstItem="hbK-Lu-pIH" firstAttribute="top" secondItem="Yo0-mK-AnH" secondAttribute="bottom" constant="10" id="TAW-f4-BeS"/>
+                                            <constraint firstItem="Yo0-mK-AnH" firstAttribute="top" secondItem="oVm-hH-4Yg" secondAttribute="bottom" constant="10" id="TPl-zy-WSz"/>
+                                            <constraint firstAttribute="trailing" secondItem="hbK-Lu-pIH" secondAttribute="trailing" constant="16" id="TYd-KH-6Yt"/>
+                                            <constraint firstItem="hbK-Lu-pIH" firstAttribute="centerX" secondItem="Yo0-mK-AnH" secondAttribute="centerX" id="a2f-x5-4qq"/>
+                                            <constraint firstItem="wMo-9d-4l3" firstAttribute="top" secondItem="hbK-Lu-pIH" secondAttribute="bottom" constant="10" id="fCr-yu-lkO"/>
+                                            <constraint firstItem="1gc-5K-mhu" firstAttribute="top" secondItem="5gR-4N-Bep" secondAttribute="bottom" constant="10" id="kAu-Sf-2rN"/>
+                                            <constraint firstAttribute="height" constant="1000" id="pdP-6q-tph"/>
+                                            <constraint firstItem="hbK-Lu-pIH" firstAttribute="leading" secondItem="HB2-r2-Wcq" secondAttribute="leading" constant="16" id="q61-hQ-5u4"/>
+                                            <constraint firstItem="oVm-hH-4Yg" firstAttribute="centerX" secondItem="HB2-r2-Wcq" secondAttribute="centerX" id="qMz-E2-s8b"/>
+                                            <constraint firstItem="Yo0-mK-AnH" firstAttribute="centerX" secondItem="oVm-hH-4Yg" secondAttribute="centerX" id="rmx-Vc-5iI"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="HB2-r2-Wcq" secondAttribute="trailing" id="38X-C0-MUk"/>
+                                    <constraint firstAttribute="bottom" secondItem="HB2-r2-Wcq" secondAttribute="bottom" id="HDB-R9-cka"/>
+                                    <constraint firstItem="HB2-r2-Wcq" firstAttribute="top" secondItem="Gyx-Sx-dH3" secondAttribute="top" id="SYj-tP-5xz"/>
+                                    <constraint firstItem="HB2-r2-Wcq" firstAttribute="leading" secondItem="Gyx-Sx-dH3" secondAttribute="leading" id="UEn-eb-K6h"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Gyx-Sx-dH3" firstAttribute="leading" secondItem="PkQ-zg-Ljh" secondAttribute="leading" id="GQk-z4-ryc"/>
+                            <constraint firstItem="Gyx-Sx-dH3" firstAttribute="bottom" secondItem="PkQ-zg-Ljh" secondAttribute="bottom" id="Vlw-j9-kfG"/>
+                            <constraint firstItem="HB2-r2-Wcq" firstAttribute="width" secondItem="89a-xr-bbs" secondAttribute="width" id="eTN-hW-9Am"/>
+                            <constraint firstItem="Gyx-Sx-dH3" firstAttribute="top" secondItem="PkQ-zg-Ljh" secondAttribute="top" id="mxK-ez-u0H"/>
+                            <constraint firstItem="Gyx-Sx-dH3" firstAttribute="trailing" secondItem="PkQ-zg-Ljh" secondAttribute="trailing" id="xs3-9o-78F"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="PkQ-zg-Ljh"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Profile" id="MHQ-pv-Ynr">
+                    <navigationItem key="navigationItem" id="MHQ-pv-Ynr" userLabel="Nickname">
                         <barButtonItem key="leftBarButtonItem" title="Logout" id="OpO-5j-wbL">
                             <connections>
                                 <action selector="logout:" destination="PME-L5-NEi" id="h6F-ri-l3M"/>
@@ -27,6 +107,11 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="aboutLabel" destination="hbK-Lu-pIH" id="jdS-IL-REx"/>
+                        <outlet property="realScrollView" destination="Gyx-Sx-dH3" id="thT-Q6-RgR"/>
+                        <outlet property="scrollView" destination="HB2-r2-Wcq" id="Toz-N8-LgQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kbu-S6-hvN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -55,6 +140,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="1" width="940" height="788"/>
         <image name="user_male" width="30" height="30"/>
     </resources>
 </document>
